# ai-intercom

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.daemon.yml  docker-compose.hub.yml  install.sh  pyproject.toml
.claude/commands/: intercom.md  narrate.md
.github/workflows/: ci.yml
config/: ai-intercom-daemon.service  config.example.yml  mcp-config.yml  policies.example.yml  policies.yml
docs/: DEPLOYMENT.md  PROMPT-DETECTION-STATUS.md
docs/plans/: 2026-02-28-interactive-chat-design.md  2026-02-28-interactive-chat-plan.md  2026-03-01-hub-intelligent-design.md  2026-03-01-hub-intelligent-plan.md  2026-03-04-ccusage-stats-attention-hub-design.md  2026-03-04-ccusage-stats-attention-hub.md  2026-03-04-notification-filtering-conversation-memory-design.md  2026-03-04-notification-filtering-conversation-memory-plan.md  2026-03-06-claude-pty-design.md  2026-03-06-permission-hook-phase1-plan.md  2026-03-06-tmux-free-a2a-attention-design.md  2026-03-06-tts-narrator-design.md  2026-03-06-tts-narrator-plan.md  2026-03-07-telegram-voice-conversation-design.md  2026-03-07-telegram-voice-conversation-plan.md
pwa/: app.js  index.html  manifest.json  styles.css  sw.js  terminal.js  tts.js
scripts/: cc-attention-cleanup  cc-attention-heartbeat  cc-heartbeat.sh  check-inbox-hook.sh  claude-pty.py  claude-session  claude-tmux.sh
src/: __init__.py  cli.py
src/daemon/: __init__.py  agent_launcher.py  api.py  attention_monitor.py  hub_client.py  main.py  mcp_server.py  prompt_parser.py  upgrade.py  (+1 more)
(+54 files in other folders)
